# dandelion_test

./: .gitignore  .pre-commit-config.yaml  README.md  linters_run.sh  pyproject.toml
app/: alembic.ini  main.py
app/api/: __init__.py  main.py
app/api/services/: router.py  utils.py
app/api/v1/: __init__.py
app/api/v1/events/: handlers.py  router.py
app/api/v1/users/: handlers.py  router.py
app/core/: config.py
app/core/database/postgresql/: __init__.py  connection.py  decorators.py
app/core/database/redis/: __init__.py  connection.py
app/core/exceptions/: authentication.py
app/infrastructure/enums/: postgres_enums.py
app/infrastructure/models/postgresql/: __init__.py  abc.py  achievements.py  events.py
app/infrastructure/repositories/: abc.py
app/infrastructure/repositories/postgresql/: __init__.py  abc.py  achievement.py  event.py
app/infrastructure/schemas/: __init__.py  abc.py
app/infrastructure/schemas/api/: __init__.py  responses.py
app/infrastructure/schemas/api/events/: __init__.py  requests.py
app/infrastructure/schemas/api/users/: __init__.py  dto.py
app/infrastructure/schemas/models/: __init__.py  achievment.py  event.py
app/infrastructure/schemas/services/authentication/: __init__.py  auth.py
app/migrations/: env.py
app/migrations/versions/: 49bd1b68269f_.py
app/services/: __init__.py  startup.py
app/services/authentication/: depends.py  services.py
app/services/cache/: manager.py
app/services/celery/: app.py
app/services/celery/tasks/: events.py  utils.py
app/services/loggs/: __init__.py  formatters.py  loggers.py  main.py  utils.py
app/services/middlewares/: __init__.py  main.py  requests.py
app/services/redis/: __init__.py  manager.py
docker/: .env.example  dctl.sh  docker-compose.yaml  migrations.sh
docker/containers/api/: Dockerfile  Dockerfile.deploy
docker/containers/redis/: Dockerfile  redis.conf
docker/entrypoints/: start.sh
docker/init-scripts/: 01-create-test-db.sh
tests/: conftest.py  pytest.ini
tests/fixtures/: postgresql.py
tests/infrastructure_tests/postgresql_tests/: models_test.py
tests/services_tests/: redis.py  redis_cache_manager_test.py
tests/unit_tests/repositories_tests/: test_achievement_repository.py
